--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
-    "protocol": "postres",
+    "protocol": "postgres",
     "dialectOptions": {
       "ssl": {
         "require": true,
